--- a/templates/about.html
+++ b/templates/about.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+﻿{% extends "base.html" %}
 
 <html>
     <title>DBL about</title>
@@ -109,7 +109,25 @@
         </div>
         <div> 
           <form action="#" method="POST" enctype="multipart/form-data">
-              <input type="file" name="FileSelect" id="FileSelect" >
+              <input type="file" name="FileSelect" id="FileSelect" value="All_fixation_data_cleaned_up">
+              <select name="user_select" multiple>
+                {% for u in userdata %}
+                    {% if u.name in activeusersdata %}
+                      <option value="{{ u.name }}" selected>{{ u.name }}</option>
+                    {% else %}
+                      <option value="{{ u.name }}">{{ u.name }}</option>
+                    {% endif %}
+                {% endfor %}
+              </select>
+              <select name="stimuli_select">
+                {% for s in stimulidata %}
+                  {% if s.name in activestimulidata %}
+                    <option value="{{ s.name }}" selected>{{ s.name }}</option>
+                  {% else %}
+                    <option value="{{ s.name }}">{{ s.name }}</option>
+                  {% endif %}
+                {% endfor %}
+              </select>
               <button type="submit">Choose File(s)</button>
               <span ></span>
           </form>
