--- a/templates/home.html
+++ b/templates/home.html
@@ -7,6 +7,33 @@
     {% block navbar_home_button %}
     {% endblock navbar_home_button %}
 
-</hmtl>
 
-
+    {% block content %}
+    <!DOCTYPE html>
+    <html lang="en">
+    <head>
+        <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+        <meta name="viewport" content="width=device-width">
+        <meta charset="utf-8">
+    </head>
+    <body>
+        <h1>
+          <form action="#" method="POST" enctype="multipart/form-data">
+            <input type="file" name="FileSelect" id="FileSelect" value="All_fixation_data_cleaned_up">
+            <button type="submit">Select</button>
+          </form>
+        </h1>
+        {% if filetext != "" %}
+        <div>
+            {{ filetext }}
+        </div>
+        {% endif %}
+        
+        <h1>
+            Current File: {{ curfile }}
+        </h1>
+  
+    </body>
+    </hmtl>
+    {% endblock content %}
+</html>
