--- a/templates/about.html
+++ b/templates/about.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+﻿{% extends "base.html" %}
 
 <html>
     <title>DBL about</title>
@@ -105,7 +105,6 @@
         </div>
         <div> 
           <form action="#" method="POST" enctype="multipart/form-data">
-              <input type="file" name="FileSelect" id="FileSelect" value="All_fixation_data_cleaned_up">
               <select name="user_select" multiple>
                 {% for u in userdata %}
                     {% if u.name in activeusersdata %}
