--- a/templates/home.html
+++ b/templates/home.html
@@ -22,31 +22,54 @@
   <p style="text-align: center;">Welcome, we are group 46, DEVISUALS, and this is our project for the course DBL. You can build your own visualizations by uploading a dataset by pressing the upload button and then head to the visualization page. 
     We have 5 visualizations to choose from: <a href="/bar">Bar Chart</a>, <a href="/scatterplot">Scatter Plot </a>, <a href="/heatmap">Heat Map</a> and a <a href="/gaze_strip_plot">Gaze Strip Plot</a> 
     (you can click on these links as well). At the current state of the webtool it is not possible to select Everyone when using the Gaze Strip Plot, so please keep that in mind. If a memory error occurs while using the Gaze Strip Plot then head back to the Scatter plot and change the previously selected user to another one and try again.
-    Thank you for visiting and hope you enjoy our webtool!
+    If you want to use the given dataset then you must close chrome and reopen the website. Thank you for visiting and hope you enjoy our webtool!
   </p>
   <hr>
 </div>
 
 <!-- This is the file selection -->
-<form action="#" method="POST" enctype="multipart/form-data" class="fileSelect">
+
+<form action="#" method="POST" enctype="multipart/form-data" class="FileSelect">
   <input type="file" name="FileSelect" id="FileSelect" value="All_fixation_data_cleaned_up">
   <button type="submit">Select</button>
 </form>
 <style>
-    .fileSelect{
-        display: block;
-        margin-top: 15px;
-        text-align: center;
-    }
+  .fileSelect{
+    display: block;
+    margin-left: 300px;
+    margin-right: 300px;
+    margin-top: 15px;
+    text-align: center;
+  }
 </style>
-
 {% if filetext != "" %}
-<div>
-    {{ filetext }}
+<div class="uploadtext">
+  {{ filetext }}
 </div>
 {% endif %}
+<div class="currenttext">
 Current File: {{ curfile }}
-  
+</div>
+<style>
+.currenttext{
+  display: block;
+  margin-left: 300px;
+  margin-right: 300px;
+  margin-top: 15px;
+  text-align: center;
+}
+</style>
+<style>
+  .uploadtext{
+    display: block;
+    margin-left: 300px;
+    margin-right: 300px;
+    margin-top: 15px;
+    text-align: center;
+  }
+</style>
+
+
 {% endblock homepagelogo %}
 
 {% block imageslider %}
@@ -65,12 +88,12 @@ Current File: {{ curfile }}
   <button  id="nextBtn" class="prew fa fa-chevron-right"> 
   </button>
   <div class="carousel-slide">
-    <img src="/static/images/demoplot.jpeg" id="lastClone" alt="">
-    <img src="/static/images/demoplot.jpeg" alt="">
-    <img src="/static/images/demoplot.jpeg" alt="">
-    <img src="/static/images/demoplot.jpeg" alt="">
-    <img src="/static/images/demoplot.jpeg" alt="">
-    <img src="/static/images/demoplot.jpeg" id="firstClone" alt="">
+    <img src="/static/images/barchart.png" id="lastClone" alt="">
+    <img src="/static/images/tryscatter.png" alt="">
+    <img src="/static/images/tryheatmap_2.png" alt="">
+    <img src="/static/images/GazeStripPlot.png" alt="">
+    <img src="/static/images/barchart.jpeg" alt="">
+    <img src="/static/images/tryscatter.png" id="firstClone" alt="">
   </div>
 </div>
 
